# plrqzvxnktjaeos

./: .gitignore  AGENTS.md  AGENT_TEAMS_GUIDE.md  CLAUDE.md  Cargo.toml  MIGRATION_PLAN.md  README.md  gaji.config.ts  tsconfig.json
.claude/: settings.json
.claude/docs/: code-conventions.md  doc-scope.md  doc-standards.md  error-kinds.md  external-tools.md  github-workflow.md  performance-tips.md  permissions.md  pr-guide.md  testing-philosophy.md
.claude/plans/: bubbly-puzzling-dewdrop.md  deep-hugging-haven.md
.github/workflows/: ci.yml
contracts/: README.md
contracts/cookies/: dev.txt  prod.txt
contracts/http/auth/: check_access_token_no_auth.json  create_authcode_unknown_email.json  create_token_pair_unknown_email.json  delete_token_pair_no_auth.json  get_passkeys_no_auth.json  refresh_token_pair_no_auth.json
contracts/http/users/: create_taste_no_auth.json  create_user_no_auth.json  delete_taste_no_auth.json  get_me_no_auth.json  list_histories_no_auth.json  list_notifications_no_auth.json  list_tastes_no_auth.json
contracts/openapi/: public.yaml
contracts/spa-routing/: routes.txt
crates/madome-auth-types/: Cargo.toml
crates/madome-auth-types/src/: cookie.rs  identity.rs  lib.rs  token.rs
crates/madome-core/: Cargo.toml
crates/madome-core/src/: config.rs  error.rs  health.rs  lib.rs  middleware.rs  sea_ext.rs  serde.rs  tracing.rs
crates/madome-domain/: Cargo.toml
crates/madome-domain/src/: activity.rs  book.rs  book_tag.rs  id.rs  lib.rs  pagination.rs  user.rs
crates/madome-testing/: Cargo.toml
crates/madome-testing/src/: auth.rs  fixture.rs  grpc.rs  lib.rs
services/auth/: Cargo.toml  README.md
services/auth/migration/: Cargo.toml
services/auth/migration/src/: lib.rs  m20260301_000001_create_users.rs  m20260301_000002_create_auth_codes.rs  m20260301_000003_create_passkeys.rs  m20260301_000004_create_outbox_events.rs  main.rs
services/auth/schema/: Cargo.toml
services/auth/schema/src/: auth_codes.rs  lib.rs  outbox_events.rs  passkeys.rs  users.rs
services/auth/src/: config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
services/auth/src/domain/: mod.rs  repository.rs  types.rs
services/auth/src/handlers/: auth_code.rs  mod.rs  passkeys.rs  token.rs
services/auth/src/infra/: cache.rs  db.rs  grpc.rs  mod.rs
services/auth/src/usecase/: authcode.rs  mod.rs  passkey.rs  token.rs
services/auth/tests/integration/: authcode_test.rs  helpers.rs  main.rs  passkey_test.rs  token_test.rs
services/users/: Cargo.toml
services/users/migration/: Cargo.toml
services/users/migration/data/: from_legacy.sql
services/users/migration/src/: lib.rs  m20250301_000001_create_users.rs  m20250301_000002_create_taste_books.rs  m20250301_000003_create_taste_book_tags.rs  m20250301_000004_create_history_books.rs  m20250301_000005_create_notification_books.rs  m20250301_000006_create_notification_book_tags.rs  m20250301_000007_create_fcm_tokens.rs  m20250301_000008_add_missing_indexes.rs  main.rs
services/users/schema/: Cargo.toml
services/users/schema/src/: fcm_tokens.rs  history_books.rs  lib.rs  notification_book_tags.rs  notification_books.rs  taste_book_tags.rs  taste_books.rs  users.rs
services/users/src/: config.rs  error.rs  grpc_server.rs  lib.rs  main.rs  router.rs  state.rs
services/users/src/domain/: repository.rs  types.rs
services/users/src/handlers/: fcm_token.rs  history.rs  mod.rs  notification.rs  taste.rs  user.rs
services/users/src/infra/: db.rs  grpc.rs
services/users/src/usecase/: fcm_token.rs  history.rs  mod.rs  notification.rs  renew_book.rs  taste.rs  user.rs
tools/contract-harness/: Cargo.toml  README.md
tools/contract-harness/src/: config.rs  docker.rs  fixture.rs  lib.rs  main.rs  reporter.rs  runner.rs
tools/contract-harness/src/services/: auth.rs  mod.rs  users.rs
workflows/: .gitignore  ci.ts  gaji.config.ts  package-lock.json  package.json  tsconfig.json
workflows/src/: ci.ts
