[package]
name = "madome-auth-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = "0.3"
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
