[package]
name = "madome-testing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
madome-domain = { path = "../madome-domain" }
madome-auth-types = { path = "../madome-auth-types" }
madome-core = { path = "../madome-core" }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
