[package]
name = "madome-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
madome-auth-schema = { path = "schema" }
madome-auth-types = { path = "../../crates/madome-auth-types" }
madome-core = { path = "../../crates/madome-core" }
madome-domain = { path = "../../crates/madome-domain" }

# async runtime
tokio = { workspace = true }

# web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }

# database
sea-orm = { workspace = true }

# Redis
deadpool-redis = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# identifiers
uuid = { workspace = true }

# error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# time
chrono = { workspace = true }

# random
rand = { workspace = true }

# base64 for credential_id encoding
base64 = "0.22"

# URL parsing for WebauthnBuilder
url = "2"

# CBOR for AAGUID extraction from attestation object
minicbor = "2.2"

[dev-dependencies]
madome-testing = { path = "../../crates/madome-testing" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum-test = "17"
