[package]
name = "madome-users"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "users"
path = "src/main.rs"

[dependencies]
madome-users-schema = { path = "schema" }
madome-auth-types = { path = "../../crates/madome-auth-types" }
madome-core = { path = "../../crates/madome-core" }
madome-domain = { path = "../../crates/madome-domain" }
madome-proto = { path = "../../packages/proto" }

# async runtime
tokio = { workspace = true }

# web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }

# database
sea-orm = { workspace = true }

# gRPC
tonic = { workspace = true }

# identifiers
uuid = { workspace = true }

# error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# time
chrono = { workspace = true }

[dev-dependencies]
madome-testing = { path = "../../crates/madome-testing" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum-test = "17"
