[package]
name = "contract-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "contract-harness"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
