[package]
name = "madome-auth-migration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
madome-auth-schema = { path = "../schema" }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
